# aggr-user-service

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/hooks/: post-edit-check.sh  pre-finish-check.sh  run-targeted-tests.sh
.claude/skills/add-db-migration/: SKILL.md
.github/workflows/: README.md  build.yml  deploy.yml  test.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_merchant_limits_features_webhook_rotated.py  003_webhook_secret_plain.py  f0e5e829a6f3_description.py
app/: __init__.py  main.py
app/api/: routes_internal.py  routes_me.py
app/core/: config.py  db.py  security.py
app/models/: __init__.py  merchant_feature_flags.py  merchant_limits.py  merchant_settings.py  user.py  wallet.py  webhook.py
app/schemas/: features.py  internal.py  limits.py  me.py  settings.py  user.py  wallet.py  webhook.py
app/services/: features_service.py  limits_service.py  user_service.py  wallet_service.py
docs/: USER_SERVICE_IMPROVEMENT_PLAN.md  api_contract.md  architecture.md  manual_test_flows.md  open_questions.md  plan.md  test_report.md
spec/: acceptance_checklist.md  service_scope.md
terraform/: .gitignore  README.md  ecs.tf  main.tf  secrets-variables.tf  secrets.tf  terraform.tfvars.example  variables.tf
tests/: __init__.py  test_internal_api.py
tests/unit/: test_internal_capabilities.py  test_limits_schema.py  test_me_routes.py  test_wallet_service.py
(+4 files in other folders)
